--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "langchain-monorepo"
+name = "langchain"
 version = "0.0.1"
 description = "LangChain mono-repo"
 authors = []
